# pen-and-paiper

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  ci.yml  tsconfig.base.json  tsconfig.browser.json
backend/: package.json
backend/src/ts/: config.ts  index.ts  wss.ts
faster_whisper_backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  runpod_setup.sh
faster_whisper_backend/app/: main.py
faster_whisper_backend/app/static/: index.html
faster_whisper_backend/transcription_receiver/: README.md
faster_whisper_backend/transcription_receiver/app/: main.py
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/src/: App.tsx  config.ts  index.css  main.ts
frontend/src/components/: Recorder.tsx  Section.tsx  StatusIcon.tsx  Stream.tsx  TabButton.tsx  Uploader.tsx
frontend/src/types/: index.ts
mcpserver/: package.json  tsconfig.json
mcpserver/src/ts/: server.ts
mcpserver/src/ts/data/: mockDatabase.ts
mcpserver/src/ts/routes/: api.ts
mistral-client/: Dockerfile  client.py  pyproject.toml  requirements.txt
mistral-client/src/: client.py  extract_pdf_text.py  extract_text.py
mistral-client/src/tests/: test-prompt.sh
python_pdf_transcription/: README.md  extract_text.py
roll20-plugin/: README.md  package.json  tsconfig.json  vite.config.js
roll20-plugin/src/ts/: config.ts  index.ts
