[project]
name = "faster-whisper-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.13",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "faster-whisper>=1.1.1",
    "numpy>=2.2.6",
    "python-multipart>=0.0.20",
    "torch>=2.7.1",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]
