[project]
name = "mistral-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.0",
    "chromadb>=1.0.12",
    "fastapi[standard]>=0.115.9",
    "griffe>=1.7.3",
    "mcp>=1.9.4",
    "mistralai>=1.8.2",
    "pdfplumber>=0.11.7",
    "sentence-transformers>=4.1.0",
]
